Complete query evaluation